# assessv2

./: .gitignore  AGENT.md  README.md  build.ps1  package-exe.ps1
backend/: .env.example  go.mod  go.sum
backend/config/: config.example.yaml
backend/desktop/: README.md  app.go  assets_embed.go  backend.go  input_method_other.go  input_method_windows.go  main.go  process_cleanup_other.go  process_cleanup_windows.go  wails.json
backend/migrations/: 0001_init.up.sql  0002_m2_org_and_assessment.down.sql  0002_m2_org_and_assessment.up.sql  0003_m3_rules_and_templates.up.sql  0004_m4_score_collection.up.sql  0006_add_resource_permissions.down.sql  0007_update_assessment_category_system.up.sql  0008_assessment_categories.down.sql  0009_m5_calc_engine.down.sql  0009_m5_calc_engine.up.sql  0010_user_permission_bindings.down.sql  (+3 more)
docs/: 00-项目交付总结.md  01-系统规格说明书.md  02-数据库设计文档.md  03-前端交互设计文档.md  04-开发任务拆分与实施计划.md  05-冲突决策记录.md  06-权限管理系统设计方案.md  07-多级考核对象划分与规则复用设计.md  08-组织级逻辑备份与恢复设计方案.md  README.md  resource-permission-guide.md  分类一致性与Root删除权限更新.md  数据库设计更新说明.md
frontend/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
scripts/: apply_legacy_business_data_candidates.py  generate_desktop_icon.py  m0-acceptance.ps1  migrate-data-structure.ps1  migrate_legacy_org.py  migrate_legacy_vote_and_grade_rules.py  prepare_legacy_business_data_migration.py  rebuild-clean-db.ps1  restart-system.ps1  schema-gate.ps1
src-tauri/: Cargo.toml  tauri.conf.json
(+265 files in other folders)
