[package]
name = "assessv2-desktop"
version = "0.1.0"
description = "AssessV2 desktop application shell"
authors = ["AssessV2 Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1" }

[dependencies]
tauri = { version = "2.1.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

